changed intro-content height from 100vh to 80vh to avoid overlap on About secdtion

--- a/src/styles.css
+++ b/src/styles.css
@@ -65,7 +65,7 @@ text-align: center;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 80vh; 
 }
 
 /* Timeline */
